--- a/pravah-flood-alert/public/index.html
+++ b/pravah-flood-alert/public/index.html
@@ -189,10 +189,10 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Flood Map</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#">Alerts</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="live_flood.html">Flood Map</a></li>
+          <li><a href="resource.html">Resources</a></li>
+          <li><a href="alert.html">Alerts</a></li>
+          <li><a href="technology.html">About</a></li>
         </ul>
       </nav>
       <div>
@@ -236,7 +236,7 @@
     <section class="additional-content">
       <h2>Why Choose FloodSafe?</h2>
       <p>FloodSafe provides reliable, up‑to‑date information to help communities prepare for and respond to flood events. Our system combines advanced monitoring technology with user‑friendly interfaces to keep you informed and safe.</p>
-      <button class="btn btn-primary">Learn More About Our Technology</button>
+      <a href="technology.html" class="btn btn-primary">Learn More About Our Technology</a>
     </section>
   </div>
 
@@ -257,17 +257,17 @@
           <h3>Quick Links</h3>
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Flood Map</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Alerts & Notifications</a></li>
+            <li><a href="live_flood.html">Flood Map</a></li>
+            <li><a href="resource.html">Resources</a></li>
+            <li><a href="alert.html">Alerts & Notifications</a></li>
             <li><a href="create.html">Create Account</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h3>Resources</h3>
           <ul>
-            <li><a href="#">Flood Safety Tips</a></li>
-            <li><a href="#">Emergency Contacts</a></li>
+            <li><a href="resource.html">Flood Safety Tips</a></li>
+            <li><a href="emergency.html">Emergency Contacts</a></li>
             <li><a href="#">Weather Updates</a></li>
             <li><a href="#">Preparation Guides</a></li>
           </ul>
@@ -275,16 +275,18 @@
         <div class="footer-section">
           <h3>Contact Us</h3>
           <ul>
-            <li><i class="fas fa-envelope"></i> support@floodsafe.com</li>
-            <li><i class="fas fa-phone"></i> +1 (800) 555-FLOD</li>
-            <li><i class="fas fa-map-marker-alt"></i> 123 Safety Drive, Weatherville</li>
+            <li><i class="fas fa-envelope"></i> manasdobal82@gmail.com</li>
+            <li><i class="fas fa-phone"></i> +91 8979298820</li>
+           
           </ul>
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2025 FloodSafe. All rights reserved.</p>
+        <p>&copy; 2025 Pravah. All rights reserved.</p>
       </div>
     </div>
   </footer>
 </body>
 </html>
+
+
